CSS: solve contrast issues

--- a/styles.scss
+++ b/styles.scss
@@ -16,6 +16,7 @@ $primary: #48206c; // navbar colour
     --sidebar-border: 1px solid rgba(0,0,0,.05);; // sidebar border colour and weight
     --warning-bg: #fdf7eb;
     --code-text: #003B4F;
+    --code-op: #5E5E5E;
     --code-ot: #003B4F;
     --code-fu: #4758AB;
     --code-st: #20794D;
@@ -41,6 +42,7 @@ $primary: #48206c; // navbar colour
         --warning-bg: #432d09;
         --code-bg: #373737; // code background colour
         --code-text: #faf9f8;
+        --code-op: #A4A4A4;
         --code-ot: #00e0e0;
         --code-kw: #7DC1FF;
         --code-bu: #ffa07a;
@@ -63,6 +65,7 @@ $primary: #48206c; // navbar colour
 code {
   border-radius: .25rem;
   color: var(--code-callout);
+  background-color: var(--code-callout-bg);
 }
 
 p code:not(.sourceCode), li code:not(.sourceCode), td code:not(.sourceCode) {
@@ -106,6 +109,10 @@ pre {
 
 pre > code.sourceCode > span {
 	color: var(--code-text);
+}
+
+code span.op {
+  color: var(--code-op);
 }
 
 code span.ot {
